# recreate-obj-classification-model

./: .env.example  .gitignore  README.md  TFLite Model Test.ipynb  converter.py  labelmap.txt  main.py  pipeline.config  pyproject.toml  requirements.txt
configs/: pipeline.config.template
scripts/: export_model.sh  setup_environment.sh
src/inference/: predict.py
src/models/: config.py
src/training/: train.py
src/utils/: helpers.py
