[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "recreate-obj-classification-model"
version = "0.1.0"
description = "Object classification pipeline using TF Object Detection API and Roboflow datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tensorflow==2.13.0",
    "roboflow>=1.1.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
